layout fixed on small viewports

--- a/src/views/home.css
+++ b/src/views/home.css
@@ -24,6 +24,14 @@
     transform: translate3d(0, 0, 0);  
   }
 }
+@keyframes closing-sm {
+  from {
+    transform: translate3d(0%, 0, 0);
+  }
+  to {
+    transform: translate3d(100%, 0, 0);  
+  }
+}
 @keyframes closing {
   from {
     clip-path: circle(75% at 100% 50%);
@@ -43,16 +51,15 @@
   }
 }
 #home {
-  padding-bottom: 6rem;
-  @apply bg-yellow-50 fixed top-0 left-0 w-full h-full z-100 flex-col justify-evenly;
+  @apply bg-yellow-50 fixed top-0 left-0 w-full h-full z-40 flex-col justify-evenly;
 }
 #home.closing {
-  animation: 1.3s closing forwards;
+  animation: 1.3s closing-sm forwards;
 }
 #home header {
   left: 5%;
   width: 90%;
-  @apply relative flex flex-col justify-around content-between order-2 md:order-first;
+  @apply mt-auto md:mt-0 relative flex flex-col justify-around content-between order-2 md:order-first;
 }
 #home > div {
   left: 5%;
@@ -108,7 +115,7 @@
 #home footer {
   transform: translate3d(0, 100%, 0);
   animation: 1.3s footer forwards 1.1s;
-  @apply fixed bottom-0 left-0 grid grid-cols-4 grid-rows-2 px-2 h-24 w-full md:p-5 md:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5;
+  @apply mt-auto order-last md:mt-0 md:fixed md:bottom-0 md:left-0 grid grid-cols-4 grid-rows-2 px-2 h-24 w-full md:p-5 md:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5;
 }
 #home footer svg {
   width: 5rem;
@@ -126,7 +133,11 @@
 }
 @media (min-width: 768px) {
   #home {
+    padding-bottom: 6rem;
     animation: 1.3s home forwards .2s;
+  }
+  #home.closing {
+    animation: 1.3s closing forwards;
   }
   #home footer svg {
     justify-self: end;
